--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
+    "react-barcode": "^1.6.1",
     "react-dom": "19.2.3",
     "react-tabs": "^6.1.0",
     "recharts": "^3.6.0",
