--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tailwind-merge": "^3.4.0",
     "tinypdf": "^0.3.0",
     "vaul": "^1.1.2",
+    "zod": "^4.3.5",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
